src/objects/Master_Expiration_Rule__c.object
<CustomObject>
    <description>This table hold the rules for expiration</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                    <default>true</default>
                    <label>New Application</label>
                </value>
                <value>
                    <fullName>Renewal Application</fullName>
                </value>
                <value>
                    <fullName>Late Renewal</fullName>
                </value>
                <value>
                    <fullName>Reinstatement Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Long__c</fullName>
        <label>Formula (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Can be removed as a new field has been created with type long text area</description>
        <inlineHelpText>Can be removed as a new field has been created with type long text area</inlineHelpText>
        <label>Formula(Can be removed)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivity_Formula__c</fullName>
        <description>Field to record formula for applications that are closed due to inactivity.</description>
        <label>Inactivity Formula</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Step_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when Expiration date related to Two Step Fee need to be created.</description>
        <label>Two Step Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Master Expiration Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Credential__c</columns>
        <columns>License_Type__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Formula_Long__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expiration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Expiration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>